--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <base href="/">
-    <title>Angular With Webpack</title>
+    <title>Dubinina Portfolio</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">    
-  <link href="/app.630531893f4cf6abb7bd.css" rel="stylesheet"></head>
+  <link href="/app.fb62f33218cc94a78616.css" rel="stylesheet"></head>
   <body>
     <my-app>Loading...</my-app>
-  <script type="text/javascript" src="/polyfills.630531893f4cf6abb7bd.js"></script><script type="text/javascript" src="/vendor.630531893f4cf6abb7bd.js"></script><script type="text/javascript" src="/app.630531893f4cf6abb7bd.js"></script></body>
+  <script type="text/javascript" src="/polyfills.fb62f33218cc94a78616.js"></script><script type="text/javascript" src="/vendor.fb62f33218cc94a78616.js"></script><script type="text/javascript" src="/app.fb62f33218cc94a78616.js"></script></body>
 </html>
